services/archive_app/deployment.yml
# declare Traefik deployment
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: archive-app
  labels:
    app: archive-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: archive-app
  template:
    metadata:
      labels:
        app: archive-app
    spec:
      containers:
        - name: archive-app
          image: "gcr.io/d-talks-243604/d-talks_link-archive:latest"
          imagePullPolicy: Always
      imagePullSecrets:
        - name: var-registry-secret
