services/archive_app/service.yml
apiVersion: v1
kind: Service
metadata:
  name: archive-app
spec:
  selector:
    app: archive-app
  ports:
    - name: http
      targetPort: 3000
      port: 80
